:bug: fix: adm profile component dropdown z-index

--- a/src/components/ProfileSelect/ProfileSelect.module.scss
+++ b/src/components/ProfileSelect/ProfileSelect.module.scss
@@ -4,6 +4,7 @@
   background: var(--neutral-3);
   border-radius: 8px;
   margin-top: 8px;
+  z-index: 50;
 
   position: absolute;
   transform: translateY(100px);
